<resources>
    <string name="app_name">ItemFinder</string>

    <string name="search_hint">Search something</string>
    <string name="home_welcome_title">Welcome!</string>
    <string name="home_categories_title">Check by category…</string>
    <string name="home_offers_title">Technology is here!</string>
    <string name="home_offers_info">Check out our best selling category!</string>
    <string name="home_offers_details">Explore the best sellers in smartphones, headphones, smartwatches and more…</string>

    <string name="listing_item_price">%s %s</string>
    <string name="listing_no_price">Price not specified</string>

    <string name="item_description">Description:</string>
    <string name="item_no_description">We couldn\'t load the description. Try again later.</string>
    <string name="item_detail_title">Item Detail</string>

    <!-- Error Handling -->
    <string name="home_error_message">The categories could not be loaded. Please try again later.</string>
    <string name="home_error_connection">The categories could not be loaded. Please check your network connection and try again.</string>
    <string name="listing_empty_results">We did not find results for your search. Try again with different search terms, or explore our categories.</string>
    <string name="listing_error_message">Oops, something went wrong. Please try again later.</string>
    <string name="listing_error_connection">Check your network connection and try again later.</string>
</resources>